# dev-studio-template

./: CHANGELOG.md  Makefile  README.md  TEMPLATE-README.md  pyproject.toml
.claude/: CLAUDE.md  CLAUDE.md.tmpl
.claude/agents/: architect.md  architect.md.tmpl  developer.md  developer.md.tmpl  orchestrator.md  orchestrator.md.tmpl  product-manager.md  product-manager.md.tmpl  tester.md  tester.md.tmpl
.claude/commands/: sprint-start.md  standup.md  standup.md.tmpl
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-stall.yml  config.yml  feature-request.yml  incident.yml  user-story.yml  vision-intake.yml
.github/workflows/: ai-pr-review.yml  ci.yml  deploy.yml.tmpl  label-cleanup.yml  secret-canary.yml
app/: __init__.py  main.py
docs/: CONTEXT-HYGIENE.md  OPERATIONS.md  OPERATIONS.md.tmpl  TELEGRAM-SETUP.md  TROUBLESHOOTING.md  TROUBLESHOOTING.md.tmpl  backlog.json
docs/backlog/sprint-1/: STORY-001-fastapi-skeleton-healthz.md  STORY-002-pytest-one-command-tests.md  STORY-003-ci-github-actions.md  (+1 more)
docs/decisions/: ADR-0001-fastapi-skeleton.md  ADR-0002-github-native-autonomy.md  ADR-0003-event-model-v2.md  ADR-0005-pr-merged-events.md  ADR-0006-watcher-resilience.md  ADR-0007-label-cleanup.md  ADR-0009-pr-labeled-fanout.md  ADR-0010-per-project-watchers.md  ADR-0014-project-token-secret.md  ADR-0020-label-mutation-transactionality.md  ADR-0021-docs-pr-convention.md  ADR-0047-deploy-automation-pattern.md  INDEX.md  INDEX.md.tmpl
docs/designs/: STORY-001-design.md
docs/product/: personas.md  vision.md
sandbox/d211-smoke/: README.md
scripts/: README.md  agent-context-monitor.sh  agent-doctor.sh  agent-state.sh  agent-watch.sh  atomic-write.sh  bootstrap-labels.sh  bootstrap-project-board.sh  bootstrap-test-project.sh  deploy-runner.sh  dev-studio-init.sh  dev-studio-start.sh  event-log.sh  health-check.sh  reprime-agent.sh  status-action-driver.sh  wip-idle-detect.sh
scripts/install/: dev-studio-install-systemd.sh  dev-studio-uninstall-systemd.sh
scripts/kickoff/: architect.txt.tmpl  developer.txt.tmpl  orchestrator.txt.tmpl  product-manager.txt.tmpl  tester.txt.tmpl
scripts/tests/: d027-state-recovery.sh  d034-proactive-wip-idle.sh  d046-deploy-runner-env-validation.sh  d047-deploy-runner-smoke-test.sh  d211-fanout-test.sh  d212-handoff-smoke.sh  e2e-pilot.sh  faz5-smoke.sh
tests/: __init__.py  test_healthz.py  test_sigterm_handler.py
(+4 files in other folders)
